src/test/deca/context/invalid/Objet/return_void.des
The return of the method is void